@startuml CU5_Gestionar_Productos
title CU5 - Gestionar Productos (Diagrama de Clases)

skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor White
  BorderColor #444444
  ArrowColor #444444
}

class Producto {
  +id: int
  +nombre: string
  +descripcion: string
  +marca: string
  +genero: string
  +grupoEdad: string
  +precioBase: decimal
  +imagenPrincipal: string
  +activo: bool
  +fechaCreacion: datetime
  +fechaActualizacion: datetime
  +categoriaId: int
  --
  +listar(search, categoriaId, genero, activo)
  +obtenerDetalle()
  +crear()
  +actualizar()
  +cambiarEstado(activo: bool)
  +bajaLogica()
}

class VarianteProducto {
  +id: int
  +productoId: int
  +colorId: int
  +tallaId: int
  +sku: string
  +codigoBarra: string
  +imagenUrl: string
  +precioVenta: decimal
  +activo: bool
  +fechaCreacion: datetime
}

class Color {
  +id: int
  +nombre: string
  +codigoHex: string
  +activo: bool
}

class Talla {
  +id: int
  +nombre: string
  +grupoEdad: string
  +orden: int
  +activo: bool
}

class Categoria <<externa (CU6)>> #F5F5F5 {
  +id: int
  +nombre: string
}

class ProductoProveedor <<externa (CU7)>> #F5F5F5 {
  +idProducto: int
  +idProveedor: int
}

Producto "1" -- "0..*" VarianteProducto : tiene >
VarianteProducto "0..*" -- "1" Color
VarianteProducto "0..*" -- "1" Talla
Producto "0..*" -- "1" Categoria : clasificado en >
Producto "1" -- "0..*" ProductoProveedor : suministrado por >

note bottom of VarianteProducto
  Color, Talla y VarianteProducto existen
  como tablas/modelo pero aun NO tienen
  ningun endpoint que los use (sin
  controller/service propios todavia).
end note

@enduml
